--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ bin-release/
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
 
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
 target/
 !.mvn/wrapper/maven-wrapper.jar
