--- a/dialing_console/manager/src/main/resources/application-dev-redis.properties
+++ b/dialing_console/manager/src/main/resources/application-dev-redis.properties
@@ -1,9 +1,9 @@
-#spring.redis.database=0
-#spring.redis.host=10.185.149.202
-#spring.redis.port=30041
-#spring.redis.password=9khfvKp@5LZhMZfN
-#spring.redis.jedis.pool.max-active=8
-#spring.redis.jedis.pool.max-wait=-1
-#spring.redis.jedis.pool.max-idle=8
-#spring.redis.jedis.pool.min-idle=0
-#spring.redis.expire-time=18000
+spring.redis.database=0
+spring.redis.host=192.168.222.253
+spring.redis.port=6379
+#spring.redis.password=1234
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+spring.redis.expire-time=18000
